<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 Kartik Sharma
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.ksharkapps.musicnow.widgets.ShuffleButton
            android:id="@+id/action_button_shuffle"
            android:layout_width="@dimen/audio_player_controls_end_button_width"
            android:layout_height="@dimen/audio_player_controls_end_button_height"
            android:layout_gravity="center"
            android:background="@drawable/items_background"
            android:contentDescription="@string/accessibility_shuffle"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_shuffle" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.ksharkapps.musicnow.widgets.RepeatingImageButton
            android:id="@+id/action_button_previous"
            android:layout_width="@dimen/audio_player_controls_main_button_width"
            android:layout_height="@dimen/audio_player_controls_main_button_height"
            android:layout_gravity="center"
            android:background="@drawable/items_background"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_previous" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.ksharkapps.musicnow.widgets.PlayPauseButton
            android:id="@+id/action_button_play"
            android:layout_width="@dimen/audio_player_controls_main_button_width"
            android:layout_height="@dimen/audio_player_controls_main_button_height"
            android:layout_gravity="center"
            android:background="@drawable/items_background"
            android:contentDescription="@string/accessibility_play"
            android:focusable="true"
            android:clickable="false"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_play"
            app:cb_color="@color/transparent"
            app:cb_pressed_ring_width="15dip" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.ksharkapps.musicnow.widgets.RepeatingImageButton
            android:id="@+id/action_button_next"
            android:layout_width="@dimen/audio_player_controls_main_button_width"
            android:layout_height="@dimen/audio_player_controls_main_button_height"
            android:layout_gravity="center"
            android:background="@drawable/items_background"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_next" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.ksharkapps.musicnow.widgets.RepeatButton
            android:id="@+id/action_button_repeat"
            android:layout_width="@dimen/audio_player_controls_end_button_width"
            android:layout_height="@dimen/audio_player_controls_end_button_height"
            android:layout_gravity="center"
            android:background="@drawable/items_background"
            android:contentDescription="@string/accessibility_repeat"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_repeat" />
    </FrameLayout>

</merge>